# emu-mcp

./: AGENTS.md  OPENCODE_CONFIG.json  readme.md
mcp_harmonyos_emulator/: .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  test_mcp_client.py  test_published_mcp.py
mcp_harmonyos_emulator/src/mcp_harmonyos_emulator/: __init__.py
mcp_harmonyos_emulator/tests/: test_mcp_client.py  test_mcp_harmonyos_emulator.py  test_published_mcp.py  test_server.py
