[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-harmonyos-emulator"
version = "0.1.0"
description = "MCP server for HarmonyOS emulator management"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "karmar paugh", email = "xbyb26@gmail.com"}
]
keywords = ["mcp", "harmonyos", "emulator", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/xbyb26/emu-mcp"
Repository = "https://github.com/xbyb26/emu-mcp"
Issues = "https://github.com/xbyb26/emu-mcp"

[project.scripts]
mcp-harmonyos-emulator = "mcp_harmonyos_emulator:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
